# pyadditive

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.rst  build_wheel.sh  codecov.yml  compose.yaml  index.html  pyproject.toml  robots.txt  sitemap.xml  tox.ini  update-copyright.py  versions.json
.github/: copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: ci_cd.yml  label.yml
.reuse/: dep5
.reuse/templates/: ansys.jinja2
dev/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
dev/_sources/getting_started/: index.rst.txt  installation.rst.txt
dev/getting_started/: docker.html  index.html  installation.html
dev/scripts/: uncomment_code_coverage.py
doc/: Makefile  make.bat
doc/source/: conf.py  contributing.rst  examples.rst  getting-started.rst  index.rst  links.rst
doc/source/_autoapi_templates/: index.rst
doc/source/_utils/: __init__.py  panel_repr_html.py  png_scraper.py
doc/source/api/: machine.rst  (+4 more)
docker/: compose.yaml
examples/: 00_additive_single_bead.py  00_single_bead.py  01_additive_porosity.py  01_porosity.py  02_additive_2d_microstructure.py  02_additive_microstructure.py  02_microstructure.py  03_additive_thermal_history.py  03_thermal_history.py  03_using_a_custom_material.py  04_additive_doe.py  04_advanced_parametric_study.py  04_custom_material_tuning.py  04_parametric_study.py  04_using_a_custom_material.py  05_additive_3d_microstructure.py  05_advanced_optimization_workflow.py  05_advanced_parametric_study.py  05_optimization_workflow.py  06_additive_3d_microstructure.py  06_additive_custom_material_tuning.py  06_advanced_custom_material_tuning.py  07_additive_thermal_history.py  07_using_a_custom_material.py  10_advanced_custom_material_tuning.py  11_advanced_custom_material_tuning.py  11_advanced_parametric_study.py  12_additive_3d_microstructure_beta.py  README.rst  example_microstructure.py  example_porosity.py  example_single_bead.py  melt_pool.csv  microstructure-example.ipynb  porosity-example.ipynb  single_bead.py
jupyter/: doe.ipynb  microstructure-example.ipynb  porosity-example.ipynb  science-workflow.ipynb  single-bead.ipynb  singlebead-example.ipynb  thermal_history.ipynb
long_running_examples/: 06_additive_custom_material_tuning.py
release/: versions.json
requirements/: requirements_doc.txt  requirements_tests.txt
scripts/: update-copyright.py
tests/: test_additive.py  test_download.py  test_examples.py  test_geometry_file.py  test_logger.py  test_machine.py  test_material.py  test_material_tuning.py  test_metadata.py  test_microstructure.py  test_microstructure_3d.py  test_misc.py  test_parametric_study.py  test_porosity.py  test_progress_handler.py  test_server_utils.py  test_simulation.py  test_simulation_error.py  test_simulation_requests.py  test_simulation_task.py  test_simulation_task_manager.py  test_single_bead.py  test_thermal_history.py  test_utils.py
tests/data/: 242demo-study-IN718.ps  5x5x1_0x_0y_0z.stl  linux.ps  v1.no-simulations.ps  v1.with-simulations.ps  windows.ps
tests/parametric_study/: test_parametric_runner.py  test_parametric_study.py  test_parametric_study_progress_handler.py  test_parametric_utils.py
tests/server_connection/: test_local_server.py  test_network_utils.py  test_server_connection.py  test_server_utils.py
version/: index.html
version/0.12/: .buildinfo  404.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.13/: .buildinfo  404.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.14/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.15/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.16/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.17/: .buildinfo  404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.18/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.19/: 404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.20/: 404.html  index.html  objects.inv  search.html  searchindex.js
version/0.21.0b10/: 404.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.21.0b11/: 404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.21.0b12/: 404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.21.0b4/: 404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.21.0b5/: 404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.21.0b6/: 404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.21.0b8/: 404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.21.0b9/: 404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/: .buildinfo  404.html  contributing.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/stable/: 404.html  contributing.html  genindex.html  index.html  py-modindex.html  search.html  sg_execution_times.html
(+2691 files in other folders)
