[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Manufacturing",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
description = "A Python client for the Ansys Additive service"
license = {file = "LICENSE"}
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
name = "ansys-additive-core"
readme = "README.rst"
requires-python = ">=3.9,<4"
version = "0.17.3"

dependencies = [
  "ansys-api-additive==1.4.1",
  "ansys-platform-instancemanagement>=1.1.1",
  "dill>=0.3.7",
  "google-api-python-client>=1.7.11",
  "googleapis-common-protos>=1.52.0",
  "grpcio>=1.35.0",
  "grpcio-health-checking>=1.45.0",
  "importlib-metadata>=4.0",
  "numpy>=1.20.3",
  "pandas>=1.3.2",
  "panel>=1.2.1",
  "platformdirs>=3.8.0",
  "plotly>=5.16.1",
  "protobuf>=3.20.2,<5",
  "six>=1.16.0",
  "tqdm>=4.45.0",
]

[project.optional-dependencies]
tests = [
  "ansys-platform-instancemanagement==1.1.2",
  "dill==0.3.7",
  "google-api-python-client==2.109.0",
  "googleapis-common-protos==1.61.0",
  "grpcio==1.59.3",
  "grpcio-health-checking==1.48.2",
  "numpy==1.26.2",
  "pandas==2.1.3",
  "panel==1.3.4",
  "platformdirs==4.0.0",
  "plotly==5.18.0",
  "protobuf==3.20.3",
  "six==1.16.0",
  "tqdm==4.66.1", # Test specific dependencies
  "pytest==7.4.3",
  "pytest-cov==4.0.0",
]

doc = [
  "ansys-sphinx-theme==0.12.5",
  "bokeh==3.3.4",
  "enum-tools==0.11.0",
  "jupyter_sphinx==0.4.0",
  "matplotlib==3.8.2",
  "numpydoc==1.6.0",
  "pandas==2.1.3",
  "panel==1.3.4",
  "plotly==5.18.0",
  "phantomjs==1.4.1",
  "pypandoc==1.12",
  "pyvista==0.44.2",
  "selenium==4.15.2",
  "sphinx==7.2.6",
  "sphinx-autoapi==3.0.0", #"sphinx-autoapi @ git+https://github.com/ansys/sphinx-autoapi@feat/single-page-stable",
  "sphinx-autodoc-typehints==1.25.2",
  "sphinx-copybutton==0.5.2",
  "sphinx-design==0.5.0",
  "sphinx-gallery==0.15.0",
  "sphinx-jinja==2.0.2",
  "sphinx-notfound-page==1.0.0",
  "sphinx-toolbox==3.5.0",
  "sphinxemoji==0.2.0",
]

[project.urls]
Discussions = "https://github.com/ansys/pyadditive/discussions"
Documentation = "https://additive.docs.pyansys.com"
Issues = "https://github.com/ansys/pyadditive/issues"
Releases = "https://github.com/ansys/pyadditive/releases"
Source = "https://github.com/ansys/pyadditive"

[tool.flit.module]
name = "ansys.additive.core"

[tool.black]
line-length = 100

[tool.isort]
default_section = "THIRDPARTY"
force_sort_within_sections = true
line_length = 100
profile = "black"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
omit = ["*/parametric_study/display/*"] # TODO: Remove this once unit tests are added for these files
source = ["ansys.additive.core"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = "-ra --cov=ansys.additive.core --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv --cov-fail-under 95"
filterwarnings = ["ignore:::.*protoc_gen_swagger*"]
minversion = "7.1"
testpaths = ["tests"]

[tool.interrogate]
ignore-magic = true
ignore-private = true
ignore-semiprivate = true
ignore-setters = true
verbose = 1
