[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-additive-core"
version = "0.18.3"
description = "A Python client for the Ansys Additive service"
readme = "README.rst"
requires-python = ">=3.9,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ansys-api-additive==1.7.2",
    "ansys-platform-instancemanagement>=1.1.1",
    "ansys-tools-common>=0.4.0",
    "dill>=0.3.7",
    "google-api-python-client>=1.7.11",
    "googleapis-common-protos>=1.52.0",
    "grpcio>=1.63.0",
    "grpcio-health-checking>=1.60.0",
    "importlib-metadata>=4.0",
    "numpy>=1.20.3",
    "pandas>=1.3.2",
    "platformdirs>=3.8.0",
    "protobuf>=3.20.2,<5",
    "six>=1.16.0",
    "tqdm>=4.45.0",
    "pydantic>=2.6.3",
]

[project.optional-dependencies]
tests = [
  "ansys-platform-instancemanagement==1.1.2",
  "dill==0.3.9",
  "google-api-python-client==2.149.0",
  "googleapis-common-protos==1.65.0",
  "grpcio==1.63.0",
  "grpcio-health-checking==1.60.0",
  "numpy==2.1.2",
  "pandas==2.2.3",
  "platformdirs==4.5.1",
  "protobuf==4.25.3",
  "six==1.16.0",
  "tqdm==4.66.5",
  "pydantic==2.9.2",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
]

doc = [
  "ansys-sphinx-theme[autoapi]==1.5.0",
  "enum-tools==0.12.0",
  "jupyter_sphinx==0.5.3",
  "matplotlib==3.9.2",
  "numpydoc==1.8.0",
  "phantomjs==1.4.1",
  "pypandoc==1.14",
  "pyvista==0.46.4",
  "ipywidgets==8.1.5",
  "trame==3.7.0",
  "trame-vtk==2.8.11",
  "trame-plotly==3.0.2",
  "trame-vuetify==2.7.1",
  "imageio==2.36.0",
  "sphinx==8.1.3",
  "sphinx-autodoc-typehints==2.5.0",
  "sphinx-copybutton==0.5.2",
  "sphinx-design==0.6.1",
  "sphinx-gallery==0.18.0",
  "sphinx-jinja==2.0.2",
  "sphinx-notfound-page==1.0.4",
  "sphinx-toolbox==3.8.1",
  "sphinxemoji==0.3.1",
  "ipython>=7.0.0",
]

[project.urls]
Source = "https://github.com/ansys/pyadditive"
Issues = "https://github.com/ansys/pyadditive/issues"
Documentation = "https://additive.docs.pyansys.com"
Discussions = "https://github.com/ansys/pyadditive/discussions"
Releases = "https://github.com/ansys/pyadditive/releases"

[tool.flit.module]
name = "ansys.additive.core"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.additive.core"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.additive.core --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv --cov-fail-under 95"
testpaths = ["tests"]
filterwarnings = ["ignore:::.*protoc_gen_swagger*"]

[tool.interrogate]
ignore-semiprivate = true
ignore-private = true
ignore-setters = true
ignore-magic = true
verbose = 1
